# auto_nav

./: .gitignore  README.md  pyproject.toml
dev/: a2rl-open-loop.py  closed-loop.py  drag_race.py  dummy_setpoint.py  open-loop.py  test-plan.py  test-solver.py
dev/a2rl/: a2rl-open-loop.py  closed-loop.py  drag_race.py  open-loop.py  test-plan.py
dev/course/: actual_trajectory_pos_20250407-075357.npy  drag_race.npy  trajectory_pos.npy  trajectory_pos_test.npy
dev/logs/: logs_autonav_2025_04_05-17_42_20  logs_autonav_2025_04_05-20_39_28  logs_autonav_2025_04_05-20_41_19  logs_autonav_2025_04_05-20_42_35  logs_autonav_2025_04_05-20_43_58  logs_autonav_2025_04_05-20_48_49  logs_autonav_2025_04_05-20_55_08  logs_autonav_2025_04_05-20_57_34  logs_autonav_2025_04_05-22_12_49  logs_autonav_2025_04_05-22_19_21  logs_autonav_2025_04_05-22_20_07  logs_autonav_2025_04_05-22_21_10  logs_autonav_2025_04_05-22_25_56  logs_autonav_2025_04_05-22_27_03  logs_autonav_2025_04_05-22_27_20  logs_autonav_2025_04_05-22_28_52  logs_autonav_2025_04_05-22_29_15  logs_autonav_2025_04_05-22_29_31  logs_autonav_2025_04_05-22_30_13  logs_autonav_2025_04_05-22_30_38  logs_autonav_2025_04_05-22_39_35  logs_autonav_2025_04_05-23_02_08  logs_autonav_2025_04_05-23_04_38  logs_autonav_2025_04_05-23_50_11  logs_autonav_2025_04_06-00_08_37  logs_autonav_2025_04_06-05_37_05  logs_autonav_2025_04_06-05_38_30  logs_autonav_2025_04_06-06_11_34  logs_autonav_2025_04_06-10_40_27  logs_autonav_2025_04_06-10_41_42  logs_autonav_2025_04_06-11_12_27  logs_autonav_2025_04_06-11_21_24  (+25 more)
src/auto_nav/: __init__.py
(+38 files in other folders)
